[package]
name = "mc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
linreg = "0.2.0"
rand = "0.8.5"
rayon = "1.7.0"
serde_json = "1.0.94"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
