[package]
name = "stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
serde_json = "1.0.94"
plotters = "0.3.4"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
prettytable-rs = "0.10.0"
